# rstrf

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  flake.nix  justfile
.github/workflows/: nix.yml  rust.yml
i18n/en/: rs_trf.ftl  rstrf.ftl
resources/: app.desktop  app.metainfo.xml  de.jazzpi.rstrf.desktop
resources/icons/hicolor/64x64/apps/: de.jazzpi.rstrf.rgba
scripts/: gen_synthetic_strf.py  pass_png_historic.py
src/: app.rs  async_cache.rs  colormap.rs  coord.rs  i18n.rs  lib.rs  main.rs  menu.rs  orbit.rs  service.rs  signal.rs  spectrogram.rs  util.rs
src/colormap/: data.rs
src/spectrogram/: io.rs
src/widgets/: mod.rs  rfplot.rs  shader.wgsl
src/widgets/rfplot/: canvas.rs  colormap.rs  control.rs  coord.rs  mod.rs  plot.rs  plotter.rs  shader.rs  shader.wgsl
