[package]
name = "rstrf"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-or-later"
description = "strf but rewrite it in rust"
repository = "https://github.com/jazzpi/rstrf"

[dependencies]
anyhow = "1.0"
chrono = "0.4"
clap = { version = "4.5", features = ["derive"] }
futures-util = "0.3.31"
glob = "0.3"
regex = "1.11"
i18n-embed = { version = "0.16", features = [
    "fluent-system",
    "desktop-requester",
] }
i18n-embed-fl = "0.10"
open = "5.3.2"
rust-embed = "8.8.0"
tokio = { version = "1.48.0", features = ["full"] }
ndarray = "0.17.2"
glam = { version = "0.30.10", features = ["bytemuck"] }
bytemuck = "1.24.0"
env_logger = "0.11.8"
log = "0.4.29"
plotters-iced = { git = "https://github.com/jazzpi/plotters-cosmic-iced.git", version = "0.11.0" }
plotters = "0.3.7"
duplicate = "2.0.1"
sgp4 = "2.3.0"
ndarray-linalg = { version = "0.18.1", features = ["openblas-system"] }
itertools = "0.14.0"
copy-range = "0.1.1"
ndarray-stats = "0.7.0"

[dependencies.libcosmic]
git = "https://github.com/pop-os/libcosmic.git"
# See https://github.com/pop-os/libcosmic/blob/master/Cargo.toml for available features.
features = [
    # Accessibility support
    "a11y",
    # About widget for the app
    "about",
    # Uses cosmic-settings-daemon to watch for config file changes
    "dbus-config",
    # Support creating additional application windows.
    "multi-window",
    # On app startup, focuses an existing instance if the app is already open
    "single-instance",
    # Uses tokio as the executor for the runtime
    "tokio",
    # Windowing support for X11, Windows, Mac, & Redox
    "winit",
    # Add Wayland support to winit
    "wayland",
    # GPU-accelerated rendering
    "wgpu",
]

# Uncomment to test a locally-cloned libcosmic
# [patch.'https://github.com/pop-os/libcosmic']
# libcosmic = { path = "../libcosmic" }
# cosmic-config = { path = "../libcosmic/cosmic-config" }
# cosmic-theme = { path = "../libcosmic/cosmic-theme" }

[profile.release-with-debug]
inherits = "release"
debug = true
