[package]
name = "rstrf"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-or-later"
description = "strf but rewrite it in rust"
repository = "https://github.com/jazzpi/rstrf"
default-run = "rstrf"

[dependencies]
anyhow = "1.0"
chrono = "0.4"
clap = { version = "4.5", features = ["derive"] }
futures-util = "0.3.31"
glob = "0.3"
regex = "1.11"
i18n-embed = { version = "0.16", features = [
    "fluent-system",
    "desktop-requester",
] }
i18n-embed-fl = "0.10"
open = "5.3.2"
rust-embed = "8.8.0"
tokio = { version = "1.48.0", features = ["full"] }
ndarray = "0.17.2"
glam = { version = "0.30.10", features = ["bytemuck"] }
bytemuck = "1.24.0"
env_logger = "0.11.8"
log = "0.4.29"
plotters = "0.3.7"
duplicate = "2.0.1"
sgp4 = "2.3.0"
ndarray-linalg = { version = "0.18.1", features = ["openblas-system"] }
itertools = "0.14.0"
copy-range = "0.1.1"
ndarray-stats = "0.7.0"
iced = { version = "0.14.0", features = ["canvas", "tokio", "debug"] }
# TODO: Switch to upstream version when https://github.com/GyulyVGC/plotters-iced2/pull/11 is merged
plotters-iced2 = { git = "https://github.com/jazzpi/plotters-iced", version = "0.14.0" }
scirs2-ndimage = "0.1.3"

[profile.release-with-debug]
inherits = "release"
debug = true
