[package]
name = "rstrf"
version = "0.1.1"
edition = "2024"
license = "GPL-3.0-or-later"
description = "strf but rewrite it in rust"
repository = "https://github.com/jazzpi/rstrf"
default-run = "rstrf"

[dependencies]
anyhow = "1.0"
chrono = "0.4"
clap = { version = "4.5", features = ["derive"] }
futures-util = "0.3.31"
regex = "1.11"
tokio = { version = "1.48.0", features = ["full"] }
ndarray = "0.17.2"
glam = { version = "0.30.10", features = ["bytemuck", "serde"] }
bytemuck = "1.24.0"
env_logger = "0.11.8"
log = "0.4.29"
plotters = "0.3.7"
duplicate = "2.0.1"
sgp4 = "2.4.0"
ndarray-linalg = { version = "0.18.1", features = ["openblas-system"] }
itertools = "0.14.0"
copy-range = "0.1.1"
ndarray-stats = "0.7.0"
iced = { version = "0.14.0", features = ["canvas", "tokio", "debug", "svg"] }
# TODO: Switch to crates.io version when there is a releases including https://github.com/GyulyVGC/plotters-iced2/pull/11
plotters-iced2 = { git = "https://github.com/GyulyVGC/plotters-iced" }
scirs2-ndimage = "0.1.3"
iced_aw = { version = "0.13.0", features = [
    "card",
    "menu",
], default-features = false }
rfd = "0.17.2"
serde = "1.0.228"
serde_json = "1.0.149"
serde_with = "3.16.1"
uuid = { version = "1.20.0", features = ["v4"] }
strum = { version = "0.27.2", features = ["derive"] }
dirs = "6.0.0"
# TODO: Switch to upstream version when https://github.com/onestopjs/space_track/pull/2 is merged
space_track = { git = "https://github.com/jazzpi/space_track", branch = "predicates" }

[profile.release-with-debug]
inherits = "release"
debug = true

[lints.clippy]
# More concise for cases like .filter_map(|flag, val| flag.then(|| val))
filter_map_bool_then = "allow"
